# parallel-pi

./: CMakeLists.txt  README.md  common.cpp  common.h  main.cpp  pi.cpp  pi.cu  pi.h
